# uavEE

./: .gitignore  CMakeLists.txt  README.md
config/: chitl.json  sitl.json
include/uavEE/: utils.h
launch/: alvolo-avistar.launch  alvolo.launch  autopilot-maneuveroverride.launch  autopilot-noalvolo-gdb.launch  autopilot-noalvolo.launch  autopilot-pantilt.launch  autopilot.launch  avistar-alvolo.launch  avistar-geo.launch  avistar-rate.launch  avistar.launch  avistar_alvolo.launch  avistar_fsone.launch  cessna-houyuan.launch  cessna-simon.launch  cessna.launch  cessna_nothing.launch  cessna_redis.launch  cessna_sim.launch  cessna_simon.launch  edu.launch  edu_alvolo.launch  log_parsing.launch  phantom.launch  pulsar-alvolo.launch  pulsar.launch  pulsar_alvolo.launch  pulsar_fsone.launch  test.launch  xplane-phantom.launch  xplane.launch
src/: CMakeLists.txt  Doxyfile  format.astylerc  uavAP.cmake  uavEE.config  uavEE.files  uavEE.includes  uavEE.pro  utils.cpp
src/RemoteAutopilotInterface/: CMakeLists.txt  RemoteAutopilotInterface.cpp
src/ServoListener/: CMakeLists.txt  ServoListener.cpp  ServoListenerPlugin.cpp
src/XPlaneInterface/: CMakeLists.txt  DataRecording.cpp  RemoteAutopilotInterface.cpp  XPlaneInterface.cpp  XPlaneNode.cpp  XPlanePlugin.cpp  xplane.cmake
src/autopilot_interface/: CMakeLists.txt  package.xml
src/camera_simulation/: CMakeLists.txt  package.xml
src/ground_station/: CMakeLists.txt  package.xml
src/pan_tilt_handler/: CMakeLists.txt  package.xml
src/perspective_sim/: CMakeLists.txt  package.xml  setup.py
src/power_modeling/: CMakeLists.txt  package.xml
src/radio_comm/: CMakeLists.txt  package.xml
src/simulation_interface/: CMakeLists.txt  package.xml
src/x_plane_interface/: CMakeLists.txt  package.xml  (+2 more)
(+346 files in other folders)
